--- a/css/styles.css
+++ b/css/styles.css
@@ -368,109 +368,115 @@ a {
 /* hero */
 
 .section-hero {
-    background: #2e2f42;
-    padding: 72px 0;
-    max-width: 320;
-    margin: auto;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+  max-width: 1440px;
+  padding: 188px 0;
+  margin: 0 auto;
+  background-color: #2e2f42;
 
-background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-        url(../images/hero/background-mob-min.jpg);
+  background-image: linear-gradient(to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)),
+    url("../images/section_hero/background-mob-min.jpg");
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
-@media (min-resolution: 2x) {
-    .section-hero {
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-                rgba(46, 47, 66, 0.7)),
-            url(../images/hero/background-mob@2x-min.jpg);
-    }
+@media (min-resolution: 2dppx) {
+  .section-hero {
+    background-image: linear-gradient(to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+      url("../images/section_hero/background-mob@2x-min.jpg");
+  }
 }
 
 .hero-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #fff;
-    margin: 0 auto;
-    max-width: 216;
-    margin-bottom: 48px;
-    align-items: center;
-    
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
+  margin: 0 auto;
+  max-width: 216px;
+  margin-bottom: 48px;
+  align-items: center;
 }
 
 .hero-button {
-    display: block;
-    border: none;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #fff;
-    cursor: pointer;
-    background-color: #4d5ae5;
-    border-radius: 4px;
-    padding: 16px 32px;
-    min-width: 169px;
-    height: 56px;
-    margin: 0 auto;
+  display: block;
+  border: none;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  margin: 0 auto;
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
 .hero-button:focus {
-    background-color: #404bbf;
+  background-color: #404bbf;
 }
 
 @media (min-width: 768px) {
-    .section-hero {
-        padding: 112px 0;
-        min-width: 768px;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-                rgba(46, 47, 66, 0.7)),
-            url(../images/hero/background-tab-min.jpg);
-    }
+  .section-hero {
+    padding: 112px 0;
 
-    .hero-title {
-        max-width: 496px;
-        font-size: 56px;
-        line-height: 1.07;
-        margin-bottom: 36px;
-    }
+    background-image: linear-gradient(to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+      url("../images/section_hero/background-tab-min.jpg");
+  }
+
+  .hero-title {
+    max-width: 496px;
+    font-size: 56px;
+    line-height: 1.07;
+    margin-bottom: 36px;
+  }
 }
 
-@media (min-resolution: 2x) and (min-width:768px) {
-    .section-hero {
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-                rgba(46, 47, 66, 0.7)),
-            url(../images/hero/background-tab@2x-min.jpg);
-    }
+@media (min-width: 768px) and (min-resolution: 2dppx) {
+  .section-hero {
+    background-image: linear-gradient(to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+      url("../images/section_hero/background-tab@2x-min.jpg");
+  }
 }
 
 @media (min-width: 1158px) {
-    .section-hero {
-        padding: 188px 0;
-        max-width: 1440px;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-                    rgba(46, 47, 66, 0.7)),
-                url(../images/hero/background-desk-min.jpg);
-    }
+  .section-hero {
+    padding: 188px 0;
 
-    .hero-title {
-        margin-bottom: 48px;
-    }
+    background-image: linear-gradient(to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+      url("../images/section_hero/background-desk-min.jpg");
+  }
 
+  .hero-title {
+    margin-bottom: 48px;
+  }
 }
 
-@media (min-resolution: 2x) and (min-width:1158px) {
-    .section-hero {
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-                rgba(46, 47, 66, 0.7)),
-            url(../images/hero/background-desk@2x-min.jpg);
-    }
+@media (min-width: 1158px) and (min-resolution: 2dppx) {
+  .section-hero {
+    background-image: linear-gradient(to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+      url("../images/section_hero/background-desk@2x-min.jpg");
+  }
 }
 
 
